syntax = "proto3";

package protobuf;

import "gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.equal_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.gostring_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.stringer_all) =  true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.verbose_equal_all) = true;

// Test options
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = true;

message TestMessage {
    string message = 1;
    int32 duration = 2;
}