syntax = "proto3";

package protobuf;

option java_multiple_files = true;
option java_package = "org.perlin.noise.proto";
option java_outer_classname = "NoiseProto";

import "google/protobuf/any.proto";

import "gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.gostring_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.stringer_all) =  true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.verbose_equal_all) = true;

// Test options
// FIXME(jack0): uncomment when fixed https://github.com/gogo/protobuf/issues/407
// option (gogoproto.equal_all) = true;
// option (gogoproto.populate_all) = true;
// option (gogoproto.testgen_all) = true;

message ID {
    bytes public_key = 1;
    string address = 2;
}

message Message {
    google.protobuf.Any message = 1;

    // Sender's address and public key.
    ID sender = 2;

    // Sender's signature of message.
    bytes signature = 3;

    // request_nonce is the request/response ID. Null if ID associated to a message is not a request/response.
    uint64 request_nonce = 4;

    // message_nonce is the sequence ID.
    uint64 message_nonce = 5;
}

message Ping {
}
message Pong {
}
message LookupNodeRequest {
    ID target = 1;
}
message LookupNodeResponse {
    repeated ID peers = 1;
}

message Bytes {
    bytes data = 1;
}
